--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "fontsource-roboto": "^4.0.0",
+    "highcharts": "^10.3.3",
+    "highcharts-react-official": "^3.2.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dnd": "^16.0.1",
