--- a/ui/.gitignore
+++ b/ui/.gitignore
@@ -4,6 +4,8 @@
 /node_modules
 /.pnp
 .pnp.js
+package-lock.json
+/temp
 
 # testing
 /coverage
@@ -21,5 +23,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-*/package-lock.json
