--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "fontsource-roboto": "^4.0.0",
     "highcharts": "^10.3.3",
     "highcharts-react-official": "^3.2.0",
+    "js-file-download": "^0.4.12",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dnd": "^16.0.1",
