--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,2 @@
 FROM docker.io/nginx
-RUN rm /etc/nginx/conf.d/default.conf
-COPY nginx.conf /etc/nginx/nginx.conf
-EXPOSE 8000
+COPY nginx.conf /etc/nginx/conf.d/default.conf
