--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,14 +1,28 @@
-http {
+upstream ui {
+  server ui:3000;
+}
+
+upstream server {
+  server server:3001;
+}
 
 server {
-  listen 8000;
-
+  listen 80;
   location / {
-    proxy_pass http://ui:3000/;
+    proxy_pass http://ui;
+    proxy_redirect off;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real_IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Host $server_name;
   }
-
+  location /sockjs-node {
+    proxy_pass http://ui;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
+  }
   location /api {
-    proxy_pass http://server:3001/api;
+    proxy_pass http://server;
   }
-}
 }
