--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,13 +1,16 @@
-FROM docker.io/node:18
-WORKDIR /usr/src/app/ui
+FROM docker.io/node:18 AS builder
+WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm run build
 
-RUN npm i -g serve
+# dev
+CMD ["npm", "start"]
 
-EXPOSE 3000
-#CMD ["serve", "-s", "build"]
-# CMD serve -s build
-CMD npm start
+# prod
+# RUN npm run build
+# 
+# FROM docker.io/nginx
+# EXPOSE 3000
+# COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
+# COPY --from=builder /usr/src/app/build /usr/share/nginx/html
