--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,6 +6,14 @@ upstream server {
   server server:3001;
 }
 
+upstream authenticator {
+  server authenticator:3002;
+}
+
+upstream credithandler {
+  server credithandler:3003;
+}
+
 server {
   listen 80;
   location / {
@@ -24,5 +32,11 @@ server {
   }
   location /api {
     proxy_pass http://server;
+  }
+  location /api/user {
+    proxy_pass http://authenticator;
+  }
+  location /api/credits {
+    proxy_pass http://credithandler;
   }
 }
