--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,6 +14,18 @@ upstream credithandler {
   server credithandler:3003;
 }
 
+upstream previewhandler {
+  server previewhandler:3004;
+}
+
+upstream templatehandler {
+  server templatehandler:3005;
+}
+
+upstream downloader {
+  server downloader:3006;
+}
+
 server {
   listen 80;
   location / {
@@ -38,5 +50,14 @@ server {
   }
   location /api/credits {
     proxy_pass http://credithandler;
+  }
+  location /api/chart/preview {
+    proxy_pass http://previewhandler;
+  }
+  location /api/chart/template {
+    proxy_pass http://templatehandler;
+  }
+  location /api/chart/download {
+    proxy_pass http://downloader;
   }
 }
