--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,6 +26,10 @@ upstream downloader {
   server downloader:3006;
 }
 
+upstream exporter {
+  server exporter:3007;
+}
+
 server {
   listen 80;
   location / {
@@ -35,12 +39,6 @@ server {
     proxy_set_header X-Real_IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Host $server_name;
-  }
-  location /sockjs-node {
-    proxy_pass http://ui;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "Upgrade";
   }
   location /api {
     proxy_pass http://server;
@@ -59,5 +57,8 @@ server {
   }
   location /api/chart/download {
     proxy_pass http://downloader;
+  }
+  location /api/chart/create {
+    proxy_pass http://exporter;
   }
 }
