--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,6 +30,10 @@ upstream exporter {
   server exporter:3007;
 }
 
+upstream validator {
+  server validator:3008;
+}
+
 server {
   listen 80;
   location / {
@@ -60,5 +64,8 @@ server {
   }
   location /api/chart/create {
     proxy_pass http://exporter;
+  }
+  location /api/chart/validate {
+    proxy_pass http://validator;
   }
 }
