switched docker to production

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -121,6 +121,8 @@ services:
       - SaaS23-1-myCharts
     environment:
       - OPENSSL_CONF=/etc/ssl
+      - ACCEPT_HIGHCHARTS_LICENSE=fuckyou
+      - HIGHCHARTS_VERSION=10.3.3
 
   validator:
     container_name: saas23-1-validator
@@ -143,7 +145,7 @@ services:
     image: docker.io/mongo
     restart: always
     ports:
-      - '27018:27017'
+      - '27017'
     volumes:
       - mongodb-data:/data/db
     networks:
