--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -5,12 +5,12 @@ RUN npm install
 COPY . .
 
 # dev
-CMD ["npm", "start"]
+# CMD ["npm", "start"]
 
 # prod
-# RUN npm run build
-# 
-# FROM docker.io/nginx
-# EXPOSE 3000
-# COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
-# COPY --from=builder /usr/src/app/build /usr/share/nginx/html
+RUN npm run build
+
+FROM docker.io/nginx
+EXPOSE 3000
+COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=builder /usr/src/app/build /usr/share/nginx/html
