--- a/server/export-service/Dockerfile
+++ b/server/export-service/Dockerfile
@@ -1,7 +1,7 @@
 FROM docker.io/node:18
 WORKDIR /usr/src/app
 COPY package*.json .
-RUN npm run installer
+RUN npm i --loglevel verbose
 COPY data data/
 COPY middleware middleware/
 COPY models models/
