export service hotfix 4

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -116,9 +116,14 @@ services:
     external_links:
       - mongodb
     volumes: 
+      - /usr/src/app/node_modules
       - ./server:/usr/src/app
     networks:
       - SaaS23-1-myCharts
+    environment:
+      - OPENSSL_CONF=/etc/ssl
+      - ACCEPT_HIGHCHARTS_LICENSE=fuckyou
+      - HIGHCHARTS_VERSION=10.3.3
 
   validator:
     container_name: saas23-1-validator
